<?xml version="1.0"?>
<package format="3">
  <name>ares2_control</name>
  <version>0.0.1</version>
  <description>Locomotion control package for the Ares2 robot.</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ares2_msgs</depend> <!-- Add dependency on ares2_msgs -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
